# vinzy_datadiff

./: LICENSE  README.md  pyproject.toml
tests/: test_datadiff.py
vinzy_datadiff/: __init__.py  datadiff.py
